--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>EX CAMPO-MINATO</title>
 </head>
 <body>
+    <h1 id="result"></h1>
+    <p id="count"></p>
     <script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
