update ex complete

--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <title>EX CAMPO-MINATO</title>
 </head>
 <body>
-    <h1 id="result"></h1>
-    <p id="count"></p>
+    <div class="container">
+        <h1 id="result"></h1>
+        <p id="count"></p>
+    </div>
+
     <script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
