--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <title>EX CAMPO-MINATO</title>
 </head>
 <body>
+    <div>
     <div class="container">
-        <h1 id="result"></h1>
-        <p id="count"></p>
+        <h2 id="result"></h2>
+        <p id="count" class="final"></p>
     </div>
 
     <script type="text/javascript" src="js/script.js"></script>
